--- a/web.config
+++ b/web.config
@@ -5,5 +5,25 @@
             <remove statusCode="404" subStatusCode="-1" />
             <error statusCode="404" prefixLanguageFilePath="" path="/404.php" responseMode="ExecuteURL" />
         </httpErrors>
+        <rewrite>
+            <rules>
+                <rule name="RewriteUserFriendlyURL1" stopProcessing="true">
+                    <match url="projects/([^/]+)/?$" />
+                    <conditions>
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
+                    <action type="Redirect" url="projects.php?type=redirect&amp;app={R:1}" />
+                </rule>
+                <rule name="RewriteUserFriendlyURL2" stopProcessing="true">
+                    <match url="^projects$" />
+                    <conditions>
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
+                    <action type="Redirect" url="projects.php" />
+                </rule>
+            </rules>
+        </rewrite>
     </system.webServer>
 </configuration>
