--- a/web.config
+++ b/web.config
@@ -2,8 +2,10 @@
 <configuration>
     <system.webServer>
         <httpErrors>
+            <remove statusCode="403" subStatusCode="-1" />
             <remove statusCode="404" subStatusCode="-1" />
             <error statusCode="404" prefixLanguageFilePath="" path="/404.php" responseMode="ExecuteURL" />
+            <error statusCode="403" prefixLanguageFilePath="%SystemDrive%\inetpub\custerr" path="403.htm" responseMode="File" />
         </httpErrors>
         <rewrite>
             <rules>
@@ -23,6 +25,13 @@
                     </conditions>
                     <action type="Redirect" url="projects.php" />
                 </rule>
+				<rule name="HTTP to HTTPS redirect" stopProcessing="true">
+				  <match url="(.*)" />
+				    <conditions>
+				      <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+				    </conditions>
+				  <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{R:1}" />
+				</rule>
             </rules>
         </rewrite>
     </system.webServer>
