--- a/config/000-default.conf
+++ b/config/000-default.conf
@@ -2,7 +2,7 @@
 Listen 80
 <VirtualHost *:80>
     DocumentRoot "/var/www/site"
-    ServerName www.georgecolgrove.com
+    ServerName georgecolgrove.com
 
   
     # Other directives here
