--- a/config/000-default.conf
+++ b/config/000-default.conf
@@ -8,8 +8,8 @@ Listen 80
     # Other directives here
 </VirtualHost>
 <Directory /var/www/site/>
-      Options Indexes FollowSymLinks
-      AllowOverride All
-      Order deny,allow
-      Allow from all
+    Options -Indexes FollowSymLinks
+    AllowOverride All
+    Order deny,allow
+    Allow from all
 </Directory>
