improved docker for personal

--- a/config/000-default.conf
+++ b/config/000-default.conf
@@ -8,7 +8,7 @@ Listen 80
     # Other directives here
 </VirtualHost>
 <Directory /var/www/site/>
-    Options -Indexes FollowSymLinks
+    Options FollowSymLinks
     AllowOverride All
     Order deny,allow
     Allow from all
