--- a/config/000-default.conf
+++ b/config/000-default.conf
@@ -1,7 +1,7 @@
 # Ensure that Apache listens on port 80
 Listen 80
 <VirtualHost *:80>
-    DocumentRoot "/var/www/site"
+    DocumentRoot "/var/www/html"
     ServerName georgecolgrove.com
 
   
