--- a/config/000-default.conf
+++ b/config/000-default.conf
@@ -7,7 +7,7 @@ Listen 80
   
     # Other directives here
 </VirtualHost>
-<Directory /var/www/site/>
+<Directory /var/www/html/>
     Options FollowSymLinks
     AllowOverride All
     Order deny,allow
