improved docker for personal

--- a/config/000-default.conf
+++ b/config/000-default.conf
@@ -1,13 +1,13 @@
 # Ensure that Apache listens on port 80
 Listen 80
 <VirtualHost *:80>
-    DocumentRoot "/var/www/html"
+    DocumentRoot "/var/www/html/"
     ServerName georgecolgrove.com
 
   
     # Other directives here
 </VirtualHost>
-<Directory /var/www/html>
+<Directory /var/www/html/>
     Options FollowSymLinks
     AllowOverride All
     Order deny,allow
